--- a/app/src/main/res/layout/joke_fragment.xml
+++ b/app/src/main/res/layout/joke_fragment.xml
@@ -75,6 +75,7 @@
                     android:padding="8dp"
                     android:visibility="gone"
                     tools:visibility="visible"
+                    android:text="@{jokeUi.category}"
                     app:layout_constraintBottom_toBottomOf="parent"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintStart_toStartOf="parent"
