--- a/app/src/main/res/layout/joke_fragment.xml
+++ b/app/src/main/res/layout/joke_fragment.xml
@@ -41,7 +41,7 @@
                     android:layout_width="10dp"
                     android:layout_height="0dp"
                     android:background="@color/colorPrimaryDark"
-                    app:layout_constraintBottom_toBottomOf="@+id/jokeText"
+                    app:layout_constraintBottom_toBottomOf="@+id/categoryText"
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toTopOf="@+id/jokeText" />
 
@@ -65,35 +65,50 @@
 
                 <TextView
                     android:id="@+id/categoryText"
-                    android:layout_width="wrap_content"
+                    android:layout_width="0dp"
                     android:layout_height="wrap_content"
-                    android:layout_marginStart="8dp"
-                    android:layout_marginTop="8dp"
+                    android:paddingStart="16dp"
+                    android:paddingEnd="16dp"
+                    android:textColor="@android:color/secondary_text_dark"
                     android:layout_marginEnd="8dp"
                     android:layout_marginBottom="8dp"
-                    android:background="@color/colorPrimaryDark"
-                    android:padding="8dp"
+                    android:background="@color/windowBackgroundDark"
+                    android:paddingTop="8dp"
+                    android:textStyle="italic"
+                    android:paddingBottom="8dp"
                     android:visibility="gone"
-                    tools:visibility="visible"
-                    android:text="@{jokeUi.category}"
                     app:layout_constraintBottom_toBottomOf="parent"
                     app:layout_constraintEnd_toEndOf="parent"
-                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintStart_toEndOf="@+id/tipView"
                     app:layout_constraintTop_toBottomOf="@id/jokeText"
-                    tools:text="Sport" />
+                    tools:text="Sport"
+                    tools:visibility="visible" />
 
             </androidx.constraintlayout.widget.ConstraintLayout>
 
         </androidx.core.widget.NestedScrollView>
 
         <Button
-            android:id="@+id/nextButton"
-            style="@style/NextButton"
+            android:id="@+id/previousButton"
+            style="@style/Button"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
+            android:layout_margin="8dp"
+            android:text="@string/previous"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toStartOf="@+id/nextButton"
+            app:layout_constraintStart_toStartOf="parent" />
+
+        <Button
+            android:id="@+id/nextButton"
+            style="@style/Button"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_margin="8dp"
+            android:text="@string/next"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent" />
+            app:layout_constraintStart_toEndOf="@id/previousButton" />
     </androidx.constraintlayout.widget.ConstraintLayout>
 
 </layout>
