--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -6,10 +6,11 @@
         <item name="colorPrimary">@color/colorPrimary</item>
         <item name="colorPrimaryDark">@color/colorPrimaryDark</item>
         <item name="colorAccent">@color/colorAccent</item>
+        <item name="android:windowBackground">@color/windowBackground</item>
     </style>
 
     <style name="Button" parent="Widget.AppCompat.Button">
-        <item name="android:background">@drawable/selector_button</item>
+        <item name="android:background">@drawable/button_selector</item>
         <item name="android:textColor">@color/colorAccent</item>
     </style>
 
