Habilitar/Desabilitar botões de acordo com a posição da joke

--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -11,7 +11,7 @@
 
     <style name="Button" parent="Widget.AppCompat.Button">
         <item name="android:background">@drawable/button_selector</item>
-        <item name="android:textColor">@color/colorAccent</item>
+        <item name="android:textColor">@color/button_text_selector</item>
     </style>
 
 </resources>
